feat: auth setup
